# dputer

./: .gitignore  CMakeLists.txt  README.md
scripts/: label2inc.py
src/: CMakeLists.txt
src/basic/: CMakeLists.txt  basic.asm  basic.lbl  basic.lst  bugsnquirks.txt  min_mon.asm
src/cc65/: CMakeLists.txt  dputer.cmake
src/cc65/test/: CMakeLists.txt  hello.s
src/ehbasic/: CMakeLists.txt  basic.cfg  basic.s  min_mon.s  zeropage.s
src/ehbasic/tests/: hello.prg
src/emulator/: CMakeLists.txt  dh65c02.cpp  dhBus.cpp  dhClock.cpp  dhFileIO.cpp  dhTerm.cpp  main.cpp
src/forth/: CMakeLists.txt  coreext.f  dis65c02.f  extend.f  forget.f  forth.cfg  forth.inc  forth.lst  forth.s  forthmac.inc  module.f  order.f  primes.f  see.f  therest.f  util.f  words.f  zeropage.s
src/include/: dh65c02.h  dhBus.h  dhClock.h  dhFileIO.h  dhTerm.h  dputer.h
src/kernel/: CMakeLists.txt  bios.s  fileio.inc  fileio.s  jumptable.s  kernel.asm  kernel.cfg  kernel.inc  kernel.lbl  kernel.lst  kernel.s  loadaddr.s  macros.inc  monitor.asm  monitor.s  termio.asm  termio.inc  termio.s  vectors.s  zeropage.s
src/main/: dhFileIO.cpp  main.cpp
src/msbasic/: CMakeLists.txt  README.md  TODO.txt  aim65.cfg  aim65_extra.s  aim65_iscntc.s  aim65_loadsave.s  apple_extra.s  apple_iscntc.s  apple_loadsave.s  applesoft.cfg  array.s  cbm1_patches.s  cbmbasic1.cfg  chrget.s  crap  defines.s  defines_aim65.s  defines_apple.s  defines_cbm1.s  defines_cbm2.s  defines_dputer.s  defines_kbd.s  defines_kim.s  defines_microtan.s  defines_osi.s  defines_sym1.s  dputer.cfg  dputer_extra.s  dputer_iscntc.s  dputer_loadsave.s  error.s  eval.s  extra.s  float.s  flow1.s  flow2.s  header.s  init.s  inline.s  (+38 more)
src/oldforth/: CMakeLists.txt  asm65c02.f  extend.f  forth.inc  forth.mac  progtools.f  see.f
src/test/: allsuite.asm  crap
(+2 files in other folders)
